--- a/app/views/payment_options/dashboard.html.erb
+++ b/app/views/payment_options/dashboard.html.erb
@@ -20,8 +20,8 @@
             <% end %>
             <div class="mt-3">
               <% if payment.status === 1 %>
-                <h6>Did you pay this Month???</h6>
-                <%= link_to "YES!!", payment_options_paid_path(debt_id: @debt.id, payment: true), data: { turbo: false }, class: "btn btn-select" %>
+                <h6>Did you pay this Month?</h6>
+                <%= link_to "YES! I did!", payment_options_paid_path(debt_id: @debt.id, payment: true), data: { turbo: false }, class: "btn btn-select" %>
               <% elsif payment.status === 3 %>
                 <h5>Good Job and No Debt Anymore!</h5>
               <% end %>
