--- a/app/assets/stylesheets/debts/_new.scss
+++ b/app/assets/stylesheets/debts/_new.scss
@@ -68,8 +68,8 @@
 
   .name_input_test {
     background: linear-gradient(to right, rgb(239, 252, 254), rgb(170, 242, 255));
-    width: 70vw;
-    height: 15vw;
+    width: 60vw;
+    height: auto;
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
     margin-top: 10px;
     margin-right: 10px;
