--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,7 +5,9 @@
         <h1 class="main-word mt-2">EnDebt...Outsmart your Credit Card Debt with a Few Clicks!.</h1>
         <p>Your Portable Credit Card Debt Payment Platform</p>
       </div>
-        <%= image_tag 'payapp.svg'%>
+        <div class="d-flex justify-content-center">
+          <%= image_tag 'payapp.svg', style: 'height:400px;width:auto;'%>
+        </div>
       <%# <div class="col-12">
         <div class="main_logo">
           <%= image_tag 'endebt_logo.svg'%>
@@ -13,7 +15,7 @@
       <%# </div> %>
       <% if user_signed_in? %>
         <div class="d-flex justify-content-center mt-4 mb-2">
-          <%= link_to "Let's Start Here!", new_debt_path, class: "btn btn-action m-3" %>
+          <%= link_to "Let's Start Here!", new_debt_path, class: "btn btn-select-lp" %>
         </div>
       <% end %>
     </div>
@@ -42,7 +44,7 @@
       </div>
       <% if user_signed_in? %>
         <div class="d-flex justify-content-center mt-4 mb-2">
-          <%= link_to "Let's Start Here!", new_debt_path, class: "btn btn-action m-3" %>
+          <%= link_to "Let's Start Here!", new_debt_path, class: "btn btn-select-lp" %>
         </div>
       <% end %>
     </div>
@@ -71,7 +73,7 @@
     </div>
       <% if user_signed_in? %>
         <div class="d-flex justify-content-center mt-4 mb-5">
-          <%= link_to "Let's Start Here!", new_debt_path, class: "btn btn-action m-3" %>
+          <%= link_to "Let's Start Here!", new_debt_path, class: "btn btn-select-lp" %>
         </div>
       <% end %>
   </div>
