--- a/app/assets/stylesheets/debts/_new.scss
+++ b/app/assets/stylesheets/debts/_new.scss
@@ -95,3 +95,27 @@
     font-weight: bold;
     box-shadow: 0 0 2px rgba(0,0,0,0.2);
   }
+
+  .notification {
+    display: flex;
+    align-items: center;
+    margin-bottom: 8px;
+    background: white;
+    padding: 8px 16px;
+    border: 1px solid rgb(235,235,235);
+  }
+
+  .notification .notification-content {
+    flex-grow: 1;
+    padding: 0 24px;
+  }
+
+  .notification p {
+    margin: 0;
+    line-height: 1.4;
+  }
+
+  .notification small {
+    color: #999999;
+    font-weight: bold;
+  }
