--- a/app/assets/stylesheets/debts/_show.scss
+++ b/app/assets/stylesheets/debts/_show.scss
@@ -256,6 +256,23 @@ margin-bottom: 2.5%;
   border-radius: 15px;
 }
 
+.interest-word {
+  color: #F94949;
+  font-weight: bold;
+  font-size: larger;
+}
+
+.total-amount-word {
+  color: #000000;
+  font-weight: bold;
+  font-size: larger;
+}
+
+.principal-word {
+  color: #78C1F3;
+  font-weight: bold;
+  font-size: larger;
+}
 // .modal-wrapper {
 //   z-index: 999;
 //   position: fixed;
