--- a/app/views/debts/show.html.erb
+++ b/app/views/debts/show.html.erb
@@ -6,7 +6,7 @@
         <p>Let's get better understanding of your debt and find right option for you !</p>
       </div>
 
-      <div class="row d-flex justify-content-center pc-info-cards">
+      <div class="d-flex justify-content-center pc-info-cards">
         <div class="col-2 pc-info-card align-items-center">
           <i class="fa-solid fa-piggy-bank fa-2x mb-2" style="color: #68c2e8;"></i>
           <div class="d-flex">
@@ -67,8 +67,8 @@
           <i class="fa-solid fa-piggy-bank fa-2x mb-2" style="color: #68c2e8;"></i>
           <p class="fs-5">Points you need to understand about debt</p>
             <ul class="">
-              <li>You borrowed <%= number_to_currency(@debt.original_principal, precision: 0, unit:"¥") %>. you will end up paying <%= number_to_currency(@payment_options[3].total_monthly_payment, precision:0, unit:"¥") %> with this plan.</li>
-              <li>It means you will be paying <%= number_to_currency(@payment_options[3].total_monthly_payment - @debt.original_principal, precision:0, unit:"¥") %> as extra.</li>
+              <li>You borrowed <span class="principal-word"><%= number_to_currency(@debt.original_principal, precision: 0, unit:"¥") %></span>. you will end up paying <span class="total-amount-word"><%= number_to_currency(@payment_options[3].total_monthly_payment, precision:0, unit:"¥") %></span> with this plan.</li>
+              <li>It means you will be paying <span class="interest-word"><%= number_to_currency(@payment_options[3].total_monthly_payment - @debt.original_principal, precision:0, unit:"¥") %></span> as extra.</li>
               <li>Expected date you finish payoff is <%= @payment_options[3].final_payment_date %>.</li>
               <%# <li>Why? this huge? Because the interest amount is calculated every month based on your remaining principal. Meaning paying too much interest.</li> %>
             </ul>
