--- a/app/assets/stylesheets/debts/_show.scss
+++ b/app/assets/stylesheets/debts/_show.scss
@@ -67,8 +67,8 @@ margin-bottom: 2.5%;
 
 .pc-info-card {
   background: linear-gradient(to right, white, rgb(244, 255, 253));
-  width: 12vw;
-  height: 12vw;
+  width: 170px;
+  height: 170px;
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
   margin: 0 10px;
   padding: 15px;
@@ -94,8 +94,8 @@ margin-bottom: 2.5%;
 
 .pc-chart-balance {
   background: linear-gradient(to right, white, rgb(244, 255, 253));
-  width: 26vw;
-  height: 25vw;
+  width: 340px;
+  height: 340px;
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
   margin-top: 10px;
   margin-right: 10px;
@@ -106,8 +106,8 @@ margin-bottom: 2.5%;
 
 .pc-chart-breakdown {
   background: linear-gradient(to right, white, rgb(244, 255, 253));
-  width: 26vw;
-  height: 25vw;
+  width: 340px;
+  height: 340px;
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
   margin-top: 10px;
   margin-right: 10px;
@@ -118,8 +118,8 @@ margin-bottom: 2.5%;
 
 .pc-chart-sumarry {
   background: linear-gradient(to right, white, rgb(244, 255, 253));
-  width: 26vw;
-  height: 25vw;
+  width: 340px;
+  height: 340px;
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
   margin-top: 10px;
   margin-right: 10px;
